2444 [Settings] added option to always use the included/portable AviSynth build (disabled by default)
     [Update]   improved AviSynth portable support for external tools
     [Log]      added AviSynth+ detection
2443 [Settings] removed "Force Video File Extension for QT compatibility"
                removed "Samples between audio progress updates"
                removed "Use Advanced ToolTips"
                cosmetics
2442 [x265] fixed error during preset startup (regression of 2422)
2441 [OneClick] fixed PCM audio track handling in mkv files (regression of 2378)
2440 [XviD] hide FourCC box as it will not be used
2439 [FFMS Indexer] automatically switch to LoadCPlugin if required
                    add fpsnum and fpsden if required
2438 [x264] custom --fps values will be detected and used
2437 [OneClick] improved working directory generation
                improved handling if selected output container cannot be used
2436 [M2TS Muxer] added HEVC/x265 and MKV support (requires tsmuxer 2.5.5+)
     [OneClick] added HEVC/x265 support for MP4 and removed it for MKV
2435 [Update] optional packages will only be downloaded/enabled if needed (part II)
              now all external programs are disabled by default
2434 [Update] an update to 2431+ will not disable DGIndexNV, NeroAACenc, QAAC or x265 if already enabled
2433 [AVS Script Creator] fixed "TDeint (with EDI)" (regression of 2305)
2432 [Update] fixed DGIndexNV, NeroAACenc, QAAC and x265 update handling (regression of 2431)
2431 [Update] optional packages will only be downloaded/enabled if needed
              therefore during first use of such packages an online connection may be required
              if a package is not used in 60 days it will be disabled again
              currently the following packages are disabled by default (more to come):
              DGIndexNV, FFmpeg, MKVMerge, NeroAACenc, QAAC, x264, x264_10b, x265